Fixxed Portrait Layout OverFlow..

--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,11 @@ body {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /* Styling Starts here */
 body {
-    overflow: hidden auto; 
     background: var(--primaryCol);
     color: var(--tertiaryCol);
     user-select: none;
@@ -335,12 +335,16 @@ footer span:nth-child(2) {
      nav li:nth-child(3) a { transform: translateX(10px); }
      nav a iconify-icon { color: var(--primaryCol); font-size: 2.5rem; } 
 
+    #heroSection { height: 70vh; }
+    
     #about { flex-direction: column; }
     #about h3 { text-align: center; }
     #about p { width: 90vw; text-align: center; }
+
+    #about figure.reveal span { transform: scale(0.9) translateY(0)!important; } 
     
-    #about figure span:nth-child(1){ left: 7%; }
-    #about figure span:nth-child(2){ left: -5%; }
+    #about figure span:nth-child(1){ left: 5%; } 
+    #about figure span:nth-child(2){ left: 0; } 
 
     #popularFoods figure img:nth-child(1){ transform: rotate(-25deg) translate(120px, 60px) !important; }
     #popularFoods figure img:nth-child(2){ transform: rotate(20deg) translateX(-110px) translateY(50px) !important; }
